# behavioralsignals-python

./: .gitignore  README.md  pyproject.toml  ruff.toml
examples/batch/: README.md  batch_api_polling.py  batch_upload_dataset.py
examples/streaming/: README.md  streaming_api_file.py  streaming_from_mic.py
protos/: api.proto
src/behavioralsignals/: __init__.py  base.py  behavioral.py  client.py  configuration.py  deepfakes.py  models.py  types.py
