[project]
name = "behavioralsignals"
version = "0.1.0"
description = "SDK for the REST and Streaming APIs of Behavioral Signals"
readme = "README.md"
authors = [
    { name = "Nikos Antoniou", email = "nikos.antoniou@behavioralsignals.com" }
]
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "pydub>=0.25.1",
    "requests>=2.32.4",
]


[project.optional-dependencies]
grpc = [
    "grpcio>=1.64.0",
    "grpcio-tools>=1.64.0"
]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
